[package]
name = "weather-api-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
serde = "1.0.197"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread"] }
tokio-test = "0.4.4"
