[package]
name = "weather-api-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
bb8 = "0.8.3"
bb8-redis = "0.15.0"
redis = { version = "0.25.2", features=["json"] }
reqwest = { version = "0.12.2", features=["json"] }
serde = { version = "1.0.197", features=["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread"] }
tokio-test = "0.4.4"
tracing = "0.1.40"
